--- a/source/index.html
+++ b/source/index.html
@@ -23,4 +23,14 @@ layout: default
     {% endif %}
   </div>
 </div>
+<!DOCTYPE html>
+<html>
+
+<body>
+ <img src="source/images/logo.png" style="width:304px;height:228px">
+</body>
+
+</html>
+ 
+
 
